@@ -14,3 +14,4 @@ depth: 1
 ### Bug fixes
 
  * Make "Cancel scheduled publish" button correctly redirect back to the edit view (Sage Abdullah)
+ * Prevent crash when reverting revisions on a snippet with `PreviewableMixin` applied (Sage Abdullah)
